--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>F1 Data & Drivers</title>
+    <style>
+        /* CSS goes here */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #d00;
+        }
+        /* Add more styles for your layout, driver cards, etc. */
+    </style>
+</head>
+<body>
 
+    <div class="container">
+        <h1>Formula 1 Data & Drivers</h1>
+        <p>Your professional website about F1 data.</p>
+
+        <section id="drivers">
+            <h2>Drivers</h2>
+            <div class="driver-card">
+                <h3>Max Verstappen</h3>
+                <p>Team: Red Bull Racing</p>
+                <p>Nationality: Dutch</p>
+                <div class="car-model-placeholder">
+                    <p>3D car model placeholder.</p>
+                </div>
+            </div>
+            </section>
+    </div>
+
+    <script>
+        // JavaScript goes here
+        // This is where you would load and handle 3D models using a library
+        // For example:
+        // import * as THREE from 'three';
+        // const scene = new THREE.Scene();
+        // ...etc.
+        
+        console.log("Website loaded successfully!");
+    </script>
+
+</body>
+</html>
